--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>A Contagem Secreta do Papai Noel</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="images/presenteIcon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -148,4 +149,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
